Implemented MxNet LinearRegression

--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -542,28 +542,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "id": "82e83b52-899a-4f4e-9249-0d5a38402725",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mxnet\n",
-    "from mxnet import ndarray as mxarray\n",
-    "from mxnet import autograd as mxgrad"
+    "import mxnet as mx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "id": "bb9b2fa2-818e-42a8-9c78-8a5fe8ad4e10",
    "metadata": {},
    "outputs": [],
    "source": [
     "def mx_forward(w, X):\n",
-    "    return mxarray.dot(mx_X, mx_w)\n",
+    "    return mx.nd.dot(mx_X, mx_w)\n",
     "\n",
     "def mx_loss(y_pred, y):\n",
-    "    return mxarray.mean(mxarray.square(y_pred - y)) / 2.0\n",
+    "    return mx.nd.mean(mx.nd.square(y_pred - y)) / 2.0\n",
     "\n",
     "def mx_update_params(w, grad, lr):\n",
     "    return w - lr * grad"
@@ -571,30 +569,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "id": "4e5e9a35-01d8-4920-becd-5a01f9361a63",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Mx already uses numpy inserting\n",
     "# so I used numpy \n",
-    "mx_X = mxarray.array(np.insert(X, 0, 1, axis=1))\n",
-    "mx_y = mxarray.array(y)\n",
-    "mx_w = mxarray.zeros((mx_X.shape[1]))"
+    "mx_X = mx.nd.array(np.insert(X, 0, 1, axis=1))\n",
+    "mx_y = mx.nd.array(y)\n",
+    "mx_w = mx.nd.zeros((mx_X.shape[1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "id": "51683a55-65f1-47c5-9f31-58cf9bab2831",
    "metadata": {},
    "outputs": [],
    "source": [
     "n_iter = 10\n",
-    "history = mxarray.empty(n_iter)\n",
+    "history = mx.nd.empty(n_iter)\n",
     "for i in range(n_iter):\n",
     "    mx_w.attach_grad()\n",
-    "    with mxgrad.record():\n",
+    "    with mx.autograd.record():\n",
     "        pred = mx_forward(mx_w, mx_X)\n",
     "        loss = mx_loss(pred, mx_y)\n",
     "    history[i] = loss.asscalar()\n",
@@ -607,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "id": "80b38055-e131-4f98-81c3-497a20189c50",
    "metadata": {},
    "outputs": [
@@ -618,7 +616,7 @@
        "        9.653187, 14.891217, 46.038387, 55.678215], dtype=float32)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "id": "384ede65-b9b0-4b9d-a693-463cdf32a81b",
    "metadata": {},
    "outputs": [
@@ -640,7 +638,7 @@
        "       24.74697264,  9.65318744, 14.89121931, 46.03838695, 55.67821556])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "id": "52b70b9f-bbea-4d60-b96a-926dfe3cafe4",
    "metadata": {},
    "outputs": [
